--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,13 @@ body {
 		padding-left: 42px;
 	}
 
+	.tweet:hover .tweet-actions {
+		visibility: visible;
+	}
+
 	.tweet-actions {
 		text-align: right;
+		visibility: hidden;
 	}
 		.tweet-actions ul {
 			list-style-type: none;
@@ -215,6 +220,7 @@ body {
 	.stats {
 		margin: 12px 0 12px 42px;
 		border-top: 1px solid #e8e8e8;
+		display: none;
 	}
 		.stats, .stats div {
 			box-sizing: border-box;
@@ -256,6 +262,7 @@ body {
 			position: relative;
 			clear: both;
 			padding-left: 43px;
+			display: none;
 		}
 			.reply .avatar {
 				position: absolute;
